# vessel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  patch.diff  rustfmt.toml  sysbench-docker-vessel-results.md  test_zombie  test_zombie.rs  vessel.entitlements
.github/workflows/: ci.yml
vessel/: Cargo.toml
vessel-core/: Cargo.toml
vessel-core/src/: error.rs  image_ref.rs  lib.rs  platform.rs  state.rs  types.rs
vessel-daemon/: Cargo.toml
vessel-daemon/src/: lib.rs
vessel-image/: Cargo.toml
vessel-image/src/: lib.rs
vessel-runtime/: Cargo.toml
vessel-runtime/src/: lib.rs  linux.rs  macos.rs  unsupported.rs
vessel/src/: compose.rs  main.rs
vesseld/: Cargo.toml
vesseld/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
