[workspace]
members = ["vessel", "vessel-core", "vessel-daemon", "vessel-image", "vessel-runtime", "vesseld", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
base64 = "0.22"
bpaf = { version = "0.9", features = ["derive"] }
directories = "6"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3"
hex = "0.4"
libc = "0.2"
libloading = "0.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
url = "2"
zstd = "0.13"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
