[package]
name = "vessel-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
vessel-core = { path = "../vessel-core" }
vessel-image = { path = "../vessel-image" }
vessel-runtime = { path = "../vessel-runtime" }
